@@ -27,7 +27,7 @@ option(WITH_LUA "with lua 5.1 for mod_magnet [default: off]")
 # option(WITH_KERBEROS5 "use Kerberos5 support with OpenSSL [default: off]")
 option(WITH_FAM "fam/gamin for reducing number of stat() calls [default: off]")
 option(WITH_GDBM "gdbm storage for mod_trigger_b4_dl [default: off]")
-option(WITH_MEMCACHE "memcached storage for mod_trigger_b4_dl [default: off]")
+option(WITH_MEMCACHED "memcached storage for mod_trigger_b4_dl [default: off]")
 option(WITH_LIBEV "libev support for fdevent handlers [default: off]")
 option(WITH_LIBUNWIND "with libunwind to print backtraces in asserts [default: off]")
 
@@ -427,12 +427,14 @@ else()
 	unset(HAVE_GDBM)
 endif()
 
-if(WITH_MEMCACHE)
-	check_include_files(memcache.h HAVE_MEMCACHE_H)
-	check_library_exists(memcache mc_new "" HAVE_MEMCACHE)
-else()
-	unset(HAVE_MEMCACHE_H)
-	unset(HAVE_MEMCACHE)
+if(WITH_MEMCACHED)
+	check_include_files(libmemcached/memcached.h HAVE_LIBMEMCACHED_MEMCACHED_H)
+	check_library_exists(memcached memcached "" HAVE_LIBMEMCACHED)
+	if(HAVE_LIBMEMCACHED_MEMCACHED_H AND HAVE_LIBMEMCACHED)
+		set(USE_MEMCACHED 1)
+	else()
+		message(FATAL_ERROR "didn't find libmemcached")
+	endif()
 endif()
 
 if(NOT BUILD_STATIC)
@@ -630,8 +632,8 @@ if(HAVE_GDBM_H)
 	target_link_libraries(mod_trigger_b4_dl gdbm)
 endif()
 
-if(HAVE_MEMCACHE_H)
-	target_link_libraries(mod_trigger_b4_dl memcache)
+if(WITH_MEMCACHED)
+	target_link_libraries(mod_trigger_b4_dl memcached)
 endif()
 
 if(CMAKE_COMPILER_IS_GNUCC)
