@@ -6,6 +6,7 @@ NEWS
 - 1.4.40
   * [mod_ssi] enhance support for ssi vars (thx fbrosson)
   * add handling for lua 5.2 and 5.3 (fixes #2674)
+  * use libmemcached instead of deprecated libmemcache
 
 - 1.4.39 - 2016-01-02
   * [core] fix memset_s call (fixes #2698)
